--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,10 @@
   text-decoration: none;
 }
 
+#navbar nav a img{
+  margin-right: 15px;
+}
+
 
 @media screen and (max-width: 1080px) {
   /* body {
@@ -44,8 +48,9 @@
     }
 
     #navbar nav a img{
-      width: 70px;
-      height: 60px;
+      margin-right: 15px;
+      width: 50px;
+      height: 50px;
     }
 }
 
