--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,4 @@
 
-
 #ap{
   font-size: 200%;
 }
@@ -48,9 +47,13 @@
     }
 
     #navbar nav a img{
-      margin-right: 15px;
-      width: 60px;
-      height: 60px;
+      margin-right: 20px;
+      width: 100px;
+      height: 100px;
+    }
+
+    #navbar nav a{
+      font-size: 150%;
     }
 }
 
@@ -100,7 +103,7 @@
 
 
 /* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
-@media screen and (max-height: 450px) {
-    .sidenav {padding-top: 15px;}
-    .sidenav a {font-size: 18px;}
+@media screen and (max-width: 1080px) {
+    .sidenav {padding-top: 30px;}
+    .sidenav a {font-size: 250%;}
 }
